update go sdk with new api key and read write session endpoints
