# api/public_api.swagger.json
@@ -845,6 +845,32 @@
         "tags": ["Sessions"]
       }
     },
+    "/public/v1/submit/create_read_write_session": {
+      "post": {
+        "summary": "Create Read Write Session",
+        "description": "Create a read write session for a user",
+        "operationId": "CreateReadWriteSession",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ActivityResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CreateReadWriteSessionRequest"
+            }
+          }
+        ],
+        "tags": ["Sessions"]
+      }
+    },
     "/public/v1/submit/create_sub_organization": {
       "post": {
         "summary": "Create Sub-Organization",
@@ -1993,7 +2019,9 @@
         "ACTIVITY_TYPE_CREATE_OAUTH_PROVIDERS",
         "ACTIVITY_TYPE_DELETE_OAUTH_PROVIDERS",
         "ACTIVITY_TYPE_CREATE_SUB_ORGANIZATION_V5",
-        "ACTIVITY_TYPE_OAUTH"
+        "ACTIVITY_TYPE_OAUTH",
+        "ACTIVITY_TYPE_CREATE_API_KEYS_V2",
+        "ACTIVITY_TYPE_CREATE_READ_WRITE_SESSION"
       ]
     },
     "AddressFormat": {
@@ -2051,6 +2079,10 @@
         "updatedAt"
       ]
     },
+    "ApiKeyCurve": {
+      "type": "string",
+      "enum": ["API_KEY_CURVE_P256", "API_KEY_CURVE_SECP256K1"]
+    },
     "ApiKeyParams": {
       "type": "object",
       "properties": {
@@ -2068,6 +2100,28 @@
         }
       },
       "required": ["apiKeyName", "publicKey"]
+    },
+    "ApiKeyParamsV2": {
+      "type": "object",
+      "properties": {
+        "apiKeyName": {
+          "type": "string",
+          "description": "Human-readable name for an API Key."
+        },
+        "publicKey": {
+          "type": "string",
+          "description": "The public component of a cryptographic key pair used to sign messages and transactions."
+        },
+        "curveType": {
+          "$ref": "#/definitions/ApiKeyCurve",
+          "description": "The curve type to be used for processing API key signatures."
+        },
+        "expirationSeconds": {
+          "type": "string",
+          "description": "Optional window (in seconds) indicating how long the API Key should last."
+        }
+      },
+      "required": ["apiKeyName", "publicKey", "curveType"]
     },
     "ApiOnlyUserParams": {
       "type": "object",
@@ -2306,12 +2360,30 @@
       },
       "required": ["apiKeys", "userId"]
     },
+    "CreateApiKeysIntentV2": {
+      "type": "object",
+      "properties": {
+        "apiKeys": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/ApiKeyParamsV2"
+          },
+          "description": "A list of API Keys."
+        },
+        "userId": {
+          "type": "string",
+          "description": "Unique identifier for a given User."
+        }
+      },
+      "required": ["apiKeys", "userId"]
+    },
     "CreateApiKeysRequest": {
       "type": "object",
       "properties": {
         "type": {
           "type": "string",
-          "enum": ["ACTIVITY_TYPE_CREATE_API_KEYS"]
+          "enum": ["ACTIVITY_TYPE_CREATE_API_KEYS_V2"]
         },
         "timestampMs": {
           "type": "string",
@@ -2322,7 +2394,7 @@
           "description": "Unique identifier for a given Organization."
         },
         "parameters": {
-          "$ref": "#/definitions/CreateApiKeysIntent"
+          "$ref": "#/definitions/CreateApiKeysIntentV2"
         }
       },
       "required": ["type", "timestampMs", "organizationId", "parameters"]
@@ -2938,6 +3010,86 @@
         "sessionExpiry"
       ]
     },
+    "CreateReadWriteSessionIntent": {
+      "type": "object",
+      "properties": {
+        "targetPublicKey": {
+          "type": "string",
+          "description": "Client-side public key generated by the user, to which the read write session bundle (credentials) will be encrypted."
+        },
+        "email": {
+          "type": "string",
+          "description": "Email of the user to create a read write session for"
+        },
+        "apiKeyName": {
+          "type": "string",
+          "description": "Optional human-readable name for an API Key. If none provided, default to Read Write Session - \u003cTimestamp\u003e"
+        },
+        "expirationSeconds": {
+          "type": "string",
+          "description": "Expiration window (in seconds) indicating how long the API key is valid. If not provided, a default of 15 minutes will be used."
+        }
+      },
+      "required": ["targetPublicKey", "email"]
+    },
+    "CreateReadWriteSessionRequest": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "enum": ["ACTIVITY_TYPE_CREATE_READ_WRITE_SESSION"]
+        },
+        "timestampMs": {
+          "type": "string",
+          "description": "Timestamp (in milliseconds) of the request, used to verify liveness of user requests."
+        },
+        "organizationId": {
+          "type": "string",
+          "description": "Unique identifier for a given Organization."
+        },
+        "parameters": {
+          "$ref": "#/definitions/CreateReadWriteSessionIntent"
+        }
+      },
+      "required": ["type", "timestampMs", "organizationId", "parameters"]
+    },
+    "CreateReadWriteSessionResult": {
+      "type": "object",
+      "properties": {
+        "organizationId": {
+          "type": "string",
+          "description": "Unique identifier for a given Organization. If the request is being made by a user and their Sub-Organization ID is unknown, this can be the Parent Organization ID. However, using the Sub-Organization ID is preferred due to performance reasons."
+        },
+        "organizationName": {
+          "type": "string",
+          "description": "Human-readable name for an Organization."
+        },
+        "userId": {
+          "type": "string",
+          "description": "Unique identifier for a given User."
+        },
+        "username": {
+          "type": "string",
+          "description": "Human-readable name for a User."
+        },
+        "apiKeyId": {
+          "type": "string",
+          "description": "Unique identifier for the created API key."
+        },
+        "credentialBundle": {
+          "type": "string",
+          "description": "HPKE encrypted credential bundle"
+        }
+      },
+      "required": [
+        "organizationId",
+        "organizationName",
+        "userId",
+        "username",
+        "apiKeyId",
+        "credentialBundle"
+      ]
+    },
     "CreateSubOrganizationIntent": {
       "type": "object",
       "properties": {
@@ -3420,7 +3572,8 @@
       "enum": [
         "CREDENTIAL_TYPE_WEBAUTHN_AUTHENTICATOR",
         "CREDENTIAL_TYPE_API_KEY_P256",
-        "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256"
+        "CREDENTIAL_TYPE_RECOVER_USER_KEY_P256",
+        "CREDENTIAL_TYPE_API_KEY_SECP256K1"
       ]
     },
     "Curve": {
@@ -5106,6 +5259,12 @@
         },
         "oauthIntent": {
           "$ref": "#/definitions/OauthIntent"
+        },
+        "createApiKeysIntentV2": {
+          "$ref": "#/definitions/CreateApiKeysIntentV2"
+        },
+        "createReadWriteSessionIntent": {
+          "$ref": "#/definitions/CreateReadWriteSessionIntent"
         }
       }
     },
@@ -5842,6 +6001,9 @@
         },
         "oauthResult": {
           "$ref": "#/definitions/OauthResult"
+        },
+        "createReadWriteSessionResult": {
+          "$ref": "#/definitions/CreateReadWriteSessionResult"
         }
       }
     },
