# pkg/api/models/api_key_curve.go
@@ -1,0 +1,78 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// APIKeyCurve Api key curve
+//
+// swagger:model ApiKeyCurve
+type APIKeyCurve string
+
+func NewAPIKeyCurve(value APIKeyCurve) *APIKeyCurve {
+	return &value
+}
+
+// Pointer returns a pointer to a freshly-allocated APIKeyCurve.
+func (m APIKeyCurve) Pointer() *APIKeyCurve {
+	return &m
+}
+
+const (
+
+	// APIKeyCurveP256 captures enum value "API_KEY_CURVE_P256"
+	APIKeyCurveP256 APIKeyCurve = "API_KEY_CURVE_P256"
+
+	// APIKeyCurveSecp256k1 captures enum value "API_KEY_CURVE_SECP256K1"
+	APIKeyCurveSecp256k1 APIKeyCurve = "API_KEY_CURVE_SECP256K1"
+)
+
+// for schema
+var APIKeyCurveEnum []APIKeyCurve
+
+func init() {
+	var res []APIKeyCurve
+	if err := json.Unmarshal([]byte(`["API_KEY_CURVE_P256","API_KEY_CURVE_SECP256K1"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		APIKeyCurveEnum = append(APIKeyCurveEnum, v)
+	}
+}
+
+func (m APIKeyCurve) validateAPIKeyCurveEnum(path, location string, value APIKeyCurve) error {
+	if err := validate.EnumCase(path, location, value, APIKeyCurveEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+// Validate validates this Api key curve
+func (m APIKeyCurve) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// value enum
+	if err := m.validateAPIKeyCurveEnum("", "body", m); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// ContextValidate validates this Api key curve based on context it is used
+func (m APIKeyCurve) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
